--- a/hooks/build
+++ b/hooks/build
@@ -1,6 +1,8 @@
 #!/bin/bash
 
+VCS_REF=$(git rev-parse - short HEAD)
+
 docker build \
-  --build-arg VCS_REF=`git rev-parse — short HEAD` \
+  --build-arg VCS_REF=`git rev-parse --short HEAD` \
   --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` \
   -t $IMAGE_NAME .
