--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,29 @@
 site_name: Static MKDocs Site
 theme:
   name: "material"
+
+strict: true
+
+markdown_extensions:
+  - smarty
+  - toc:
+      permalink: True
+  - sane_lists
+  - abbr
+  - attr_list
+  - def_list
+  - footnotes
+  - codehilite
+
+plugins:
+  - search
+  - tags
+  - git-authors
+  - git-revision-date-localized
+  - codeinclude
+  - markdownextradata
+  - img2fig
+  - mermaid2
+
+extra_javascript:
+  - https://unpkg.com/mermaid/dist/mermaid.min.js
